[package]
name = "drop_arena"
version = "0.1.0"
edition = "2021"
authors = ["Mark Saving <marksaving@gmail.com>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.2"

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "arena_vs_box"
harness = false