[package]
name = "drop_arena"
version = "0.1.0"
edition = "2021"
authors = ["Mark Saving <marksaving@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "A single-type allocator which permits dropping and reclaiming of individual elements"
repository = "https://github.com/markcsaving/drop_arena"
categories = ["memory-management", "no-std"]
keywords = ["arena"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.2"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "arena_vs_box"
harness = false