[package]
name = "drop_arena"
version = "0.3.0"
edition = "2021"
authors = ["Mark Saving <marksaving@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "A single-type allocator which permits dropping and reclaiming of individual elements"
repository = "https://github.com/markcsaving/drop_arena"
categories = ["memory-management", "no-std"]
keywords = ["arena"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consume_on_drop = "0.1.1"

[dependencies.typed-arena]
version = "2.0.2"
default-features = false

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "arena_vs_box"
harness = false